# kinkagami

./: .editorconfig  .env.development  .env.production  .env.pwa  .gitignore  ARCHITECTURE.md  EXERCISES.md  README.md  ROADMAP.md  VIDEO_SELECTOR_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  server_videos.js  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
backend/: README.md  pyproject.toml
backend/src/kgm_backend/: __init__.py  config.py  contracts.py  keypoints.py  server.py  stream.py
backend/src/kgm_backend/models/: __init__.py  base.py  mediapipe_hands.py  mediapipe_pose.py  movenet.py
exercises/: 000005.ldb  LOG  LOG.old
routines/: 000005.ldb  000008.ldb  000011.ldb  LOG  LOG.old
scripts/: db-seeds-generate.mjs  db-seeds-load.mjs
setup/: configure.sh  install-deps.sh  pre-stream.sh  pre.sh  run-runtime.sh  run-stream.sh  wait-for-port.sh
setup/seeds/: manifest.json
src/: App.css  App.tsx  i18n.ts  main.tsx
src/components/: Button.scss  Button.tsx  CardLayout.tsx  DebugFSM.scss  DebugFSM.tsx  DevInfoSnackbar.tsx  ExerciseCard.scss  ExerciseCard.tsx  FilterBar.scss  FilterBar.tsx  HandCursorOverlay.scss  HandCursorOverlay.tsx  RoutineCard.scss  RoutineCard.tsx  RoutinePanel.scss  RoutinePanel.tsx  SelectableCard.scss  SelectableCard.tsx  Skeleton.scss  Skeleton.tsx  VideoRangeSlider.scss  VideoRangeSlider.tsx  VideoSelector.scss  VideoSelector.tsx
src/config/: defaultAppConfig.json  testAppConfig.json
src/context/: BlazePoseContext.tsx  BlazePoseContextProvider.tsx  PoseContext.tsx  (+12 more)
(+142 files in other folders)
